--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "compile-scss": "node-sass src/styles -o src/styles"
   },
   "eslintConfig": {
     "extends": [
