--- a/frontend/src/components/Projects/Projects_text.json
+++ b/frontend/src/components/Projects/Projects_text.json
@@ -1,14 +1,8 @@
 {
     "fr": {
-      "title":"Réalisations",
-      "name": "Jérôme Semik",
-      "offer": "Projets IT pour la gestion des risques et la conformité",
-      "pitch": "Ensemble, construisons les outils pour gérer efficacement vos risques et votre conformité réglementaire"
+      "title":"Réalisations"
     },
     "en": {
-      "title":"Projects",
-      "name": "Jérôme Semik",
-      "offer": "IT projects for risks and compliance management",
-      "pitch": "Let's build together the tools you need to effectively manage your risks and regulatory compliance."
+      "title":"Projects"
     }
   }
