--- a/frontend/src/components/Projects/ProjectsList/ProjectisList_text.json
+++ b/frontend/src/components/Projects/ProjectsList/ProjectisList_text.json
@@ -75,20 +75,30 @@
         "project9": {
             "type":"Développement web frontend",
             "description_short":"Développement du front d'un site de gestion immobilière",
+            "description_label":"Description",
             "description_long":"Projet réalisé dans le cadre de ma formation OpenClassrooms de développeur front-end.",
+            "tech_label":"Technologies utilisées",
             "tech":"React, HRML, SASS",
+            "issues_label":"Difficultées rencontrées",
             "issues":"Elaboration de composants réutilisables. Echange de paramètres entre éléments parents et enfants du site. Création d'un routeur.",
+            "skills_label":"Compétences acquises",
             "skills":"Développement avec React. Création d'une application avec Create React App. Configurer la navigation entre les pages de l'application avec React Router. Utilisation de bibliothèques externes npm",
+            "link_label":"Accès repo GitHub",
             "link":"https://github.com/Myzaka/Projet-Kasa"
 
         },
         "project10": {
             "type":"Développement web backend",
             "description_short":"Création du backend d'une librairie en ligne",
+            "description_label":"Description",
             "description_long":"Projet réalisé dans le cadre de ma formation OpenClassrooms de développeur front-end.",
+            "tech_label":"Technologies utilisées",
             "tech":"NodeJS, Express, MongoDB, Mongoose",
+            "issues_label":"Difficultées rencontrées",
             "issues":"Création des opérations CRUD. Gestion des fichiers images.",
+            "skills_label":"Compétences acquises",
             "skills":"Utilisation d'une base de données NoSQL (MongoDB) et mise en place d'un modèle de données. Mettre en place des opérations CRUD de manière sécurisée. Stocker des données de manière sécurisée",
+            "link_label":"Accès repo GitHub",
             "link":"https://github.com/Myzaka/Grimoire"
         }
     },
