--- a/frontend/src/components/Projects/ProjectsList/ProjectisList_text.json
+++ b/frontend/src/components/Projects/ProjectsList/ProjectisList_text.json
@@ -3,73 +3,105 @@
         "project1": {
             "type":"Gestion de projet",
             "description_short":"Outil d'auto-évaluation du contrôle interne",
+            "description_label":"Description",
             "description_long":"",
             "tech":"NodeJS, Express, MongoDB, Mongoose",
+            "issues_label":"Difficultées rencontrées",
             "issues":"Création des opérations CRUD. Gestion des fichiers images.",
+            "skills_label":"Compétences acquises",
             "skills":"Utilisation d'une base de données NoSQL (MongoDB) et mise en place d'un modèle de données. Mettre en place des opérations CRUD de manière sécurisée. Stocker des données de manière sécurisée",
+            "link_label":"Accès repo GitHub",
             "link":"https://github.com/Myzaka/Grimoire"
         },
         "project2": {
             "type":"Conception d'outil",
             "description_short":"Cartographie des risques",
+            "description_label":"Description",
             "description_long":"",
             "tech":"NodeJS, Express, MongoDB, Mongoose",
+            "issues_label":"Difficultées rencontrées",
             "issues":"Création des opérations CRUD. Gestion des fichiers images.",
+            "skills_label":"Compétences acquises",
             "skills":"Utilisation d'une base de données NoSQL (MongoDB) et mise en place d'un modèle de données. Mettre en place des opérations CRUD de manière sécurisée. Stocker des données de manière sécurisée",
+            "link_label":"Accès repo GitHub",
             "link":"https://github.com/Myzaka/Grimoire"
         },
         "project3": {
             "type":"Gestion de projet",
             "description_short":"Outil d'évaluation des tiers (loi Sapin II)",
+            "description_label":"Description",
             "description_long":"",
             "tech":"NodeJS, Express, MongoDB, Mongoose",
+            "issues_label":"Difficultées rencontrées",
             "issues":"Création des opérations CRUD. Gestion des fichiers images.",
+            "skills_label":"Compétences acquises",
             "skills":"Utilisation d'une base de données NoSQL (MongoDB) et mise en place d'un modèle de données. Mettre en place des opérations CRUD de manière sécurisée. Stocker des données de manière sécurisée",
+            "link_label":"Accès repo GitHub",
             "link":"https://github.com/Myzaka/Grimoire"
         },
         "project4": {
             "type":"Gestion de projet",
             "description_short":"Ligne d'alerte éthique (loi Sapin II)",
+            "description_label":"Description",
             "description_long":"",
             "tech":"NodeJS, Express, MongoDB, Mongoose",
+            "issues_label":"Difficultées rencontrées",
             "issues":"Création des opérations CRUD. Gestion des fichiers images.",
+            "skills_label":"Compétences acquises",
             "skills":"Utilisation d'une base de données NoSQL (MongoDB) et mise en place d'un modèle de données. Mettre en place des opérations CRUD de manière sécurisée. Stocker des données de manière sécurisée",
+            "link_label":"Accès repo GitHub",
             "link":"https://github.com/Myzaka/Grimoire"
         },
         "project5": {
             "type":"Conception d'outil",
             "description_short":"Analyse de la séparation des tâches en entreprise",
+            "description_label":"Description",
             "description_long":"",
             "tech":"NodeJS, Express, MongoDB, Mongoose",
+            "issues_label":"Difficultées rencontrées",
             "issues":"Création des opérations CRUD. Gestion des fichiers images.",
+            "skills_label":"Compétences acquises",
             "skills":"Utilisation d'une base de données NoSQL (MongoDB) et mise en place d'un modèle de données. Mettre en place des opérations CRUD de manière sécurisée. Stocker des données de manière sécurisée",
+            "link_label":"Accès repo GitHub",
             "link":"https://github.com/Myzaka/Grimoire"
         },
         "project6": {
             "type":"Développement web frontend",
             "description_short":"Evaluation de la conformité de moyens de paiement",
+            "description_label":"Description",
             "description_long":"",
             "tech":"NodeJS, Express, MongoDB, Mongoose",
+            "issues_label":"Difficultées rencontrées",
             "issues":"Création des opérations CRUD. Gestion des fichiers images.",
+            "skills_label":"Compétences acquises",
             "skills":"Utilisation d'une base de données NoSQL (MongoDB) et mise en place d'un modèle de données. Mettre en place des opérations CRUD de manière sécurisée. Stocker des données de manière sécurisée",
+            "link_label":"Accès repo GitHub",
             "link":"https://github.com/Myzaka/Grimoire"
         },
         "project7": {
             "type":"Gestion de projet",
             "description_short":"Outil de BI pour l'analyse de campagnes de contrôle interne",
+            "description_label":"Description",
             "description_long":"",
             "tech":"NodeJS, Express, MongoDB, Mongoose",
+            "issues_label":"Difficultées rencontrées",
             "issues":"Création des opérations CRUD. Gestion des fichiers images.",
+            "skills_label":"Compétences acquises",
             "skills":"Utilisation d'une base de données NoSQL (MongoDB) et mise en place d'un modèle de données. Mettre en place des opérations CRUD de manière sécurisée. Stocker des données de manière sécurisée",
+            "link_label":"Accès repo GitHub",
             "link":"https://github.com/Myzaka/Grimoire"
         },
         "project8": {
             "type":"Gestion de projet",
             "description_short":"Outil de tenue de registre de traitement (RGPD)",
+            "description_label":"Description",
             "description_long":"",
             "tech":"NodeJS, Express, MongoDB, Mongoose",
+            "issues_label":"Difficultées rencontrées",
             "issues":"Création des opérations CRUD. Gestion des fichiers images.",
+            "skills_label":"Compétences acquises",
             "skills":"Utilisation d'une base de données NoSQL (MongoDB) et mise en place d'un modèle de données. Mettre en place des opérations CRUD de manière sécurisée. Stocker des données de manière sécurisée",
+            "link_label":"Accès repo GitHub",
             "link":"https://github.com/Myzaka/Grimoire"
         },
         "project9": {
