Saisie texte projets

--- a/frontend/src/components/Projects/ProjectsList/ProjectisList_text.json
+++ b/frontend/src/components/Projects/ProjectsList/ProjectisList_text.json
@@ -4,79 +4,67 @@
             "type":"Gestion de projet",
             "description_short":"Outil d'auto-évaluation du contrôle interne",
             "description_label":"Description",
-            "description_long":"",
-            "tech":"NodeJS, Express, MongoDB, Mongoose",
-            "issues_label":"Difficultées rencontrées",
-            "issues":"Création des opérations CRUD. Gestion des fichiers images.",
-            "skills_label":"Compétences acquises",
-            "skills":"Utilisation d'une base de données NoSQL (MongoDB) et mise en place d'un modèle de données. Mettre en place des opérations CRUD de manière sécurisée. Stocker des données de manière sécurisée",
-            "link_label":"Accès repo GitHub",
-            "link":"https://github.com/Myzaka/Grimoire"
+            "description_long":"Déploiement et animation d'outils permettant la collecte d'informations sur l'état du contrôle interne dans une centaine de sociétés, situées dans le monde entier et faisant intervenir plusieurs centaines d'utilisateurs",
+            "tech_label":"Progiciels externes",
+            "tech":"Enablon, Ivalua, Acuredge",
+            "issues_label":"Enjeux",
+            "issues":"Pertinence des questionnaires, fiabilité du paramétrage, disponibilité et ergonomie de l'outil.",
+            "link_label":"Site web éditeur",
+            "link":"https://acuredge.devoteam.com/"
         },
         "project2": {
             "type":"Conception d'outil",
             "description_short":"Cartographie des risques",
             "description_label":"Description",
-            "description_long":"",
-            "tech":"NodeJS, Express, MongoDB, Mongoose",
-            "issues_label":"Difficultées rencontrées",
-            "issues":"Création des opérations CRUD. Gestion des fichiers images.",
-            "skills_label":"Compétences acquises",
-            "skills":"Utilisation d'une base de données NoSQL (MongoDB) et mise en place d'un modèle de données. Mettre en place des opérations CRUD de manière sécurisée. Stocker des données de manière sécurisée",
-            "link_label":"Accès repo GitHub",
-            "link":"https://github.com/Myzaka/Grimoire"
+            "description_long":"Elaboration d'un outil de cotation des risques et de représentation d'une matrice de chaleur",
+            "tech_label":"Technologie utilisée",
+            "tech":"Visual Basic pour Excel",
+            "issues_label":"Enjeux",
+            "issues":"Facilité et souplesse d'utilisation. Représentation graphique simple et claire"
         },
         "project3": {
             "type":"Gestion de projet",
             "description_short":"Outil d'évaluation des tiers (loi Sapin II)",
             "description_label":"Description",
-            "description_long":"",
-            "tech":"NodeJS, Express, MongoDB, Mongoose",
-            "issues_label":"Difficultées rencontrées",
-            "issues":"Création des opérations CRUD. Gestion des fichiers images.",
-            "skills_label":"Compétences acquises",
-            "skills":"Utilisation d'une base de données NoSQL (MongoDB) et mise en place d'un modèle de données. Mettre en place des opérations CRUD de manière sécurisée. Stocker des données de manière sécurisée",
-            "link_label":"Accès repo GitHub",
-            "link":"https://github.com/Myzaka/Grimoire"
+            "description_long":"Déploiement d'un outil permettant la revue complète d'un portefeuille de contreparties pour vérifier leur honorabilité",
+            "tech_label":"Progiciel de marché",
+            "tech":"Solution NoCode fortement paramétrable",
+            "issues_label":"Enjeux",
+            "issues":"Gestion de projet dans un environnement complexe. Fiabilisation et documentation de la solution"
         },
         "project4": {
             "type":"Gestion de projet",
             "description_short":"Ligne d'alerte éthique (loi Sapin II)",
             "description_label":"Description",
-            "description_long":"",
-            "tech":"NodeJS, Express, MongoDB, Mongoose",
-            "issues_label":"Difficultées rencontrées",
-            "issues":"Création des opérations CRUD. Gestion des fichiers images.",
-            "skills_label":"Compétences acquises",
-            "skills":"Utilisation d'une base de données NoSQL (MongoDB) et mise en place d'un modèle de données. Mettre en place des opérations CRUD de manière sécurisée. Stocker des données de manière sécurisée",
-            "link_label":"Accès repo GitHub",
-            "link":"https://github.com/Myzaka/Grimoire"
+            "description_long":"Déploiement mondial d'un outil permettant de réaliser des signalements confidentiels de situations problématiques",
+            "tech_label":"Progiciel de marché",
+            "tech":"Whispli",
+            "issues_label":"Enjeux",
+            "issues":"Complexité réglementaire lié à la multiplicité des réglementations à respecter",
+            "link_label":"Site web éditeur",
+            "link":"https://www.whispli.com/fr/"
         },
         "project5": {
             "type":"Conception d'outil",
             "description_short":"Analyse de la séparation des tâches en entreprise",
             "description_label":"Description",
-            "description_long":"",
-            "tech":"NodeJS, Express, MongoDB, Mongoose",
-            "issues_label":"Difficultées rencontrées",
-            "issues":"Création des opérations CRUD. Gestion des fichiers images.",
-            "skills_label":"Compétences acquises",
-            "skills":"Utilisation d'une base de données NoSQL (MongoDB) et mise en place d'un modèle de données. Mettre en place des opérations CRUD de manière sécurisée. Stocker des données de manière sécurisée",
-            "link_label":"Accès repo GitHub",
-            "link":"https://github.com/Myzaka/Grimoire"
+            "description_long":"Conception et développement d'un outil permettant d'identifier en détail les enjeux de séparation des tâches et de formuler des recommandations d'amélioration",
+            "tech_label":"Technologie utilisée",
+            "tech":"Visual Basic pour Excel",
+            "issues_label":"Enjeux",
+            "issues":"Qualifier les problématiques de séparation des tâches sur les principaux processus de l'entreprise. Proposer une organisation pertinente même pour des très petites structures."
         },
         "project6": {
             "type":"Développement web frontend",
             "description_short":"Evaluation de la conformité de moyens de paiement",
             "description_label":"Description",
-            "description_long":"",
-            "tech":"NodeJS, Express, MongoDB, Mongoose",
+            "description_long":"POrtage web d'une méthode d'évaluation de la sécurité et de la conformité réglementaire de moyens de paiement utilisés en entreprise",
+            "tech_label":"Technologies utilisées",
+            "tech":"Vite, HTML, JavaScript, SASS",
             "issues_label":"Difficultées rencontrées",
-            "issues":"Création des opérations CRUD. Gestion des fichiers images.",
+            "issues":"Gestion d'un formulaire interactif complexe",
             "skills_label":"Compétences acquises",
-            "skills":"Utilisation d'une base de données NoSQL (MongoDB) et mise en place d'un modèle de données. Mettre en place des opérations CRUD de manière sécurisée. Stocker des données de manière sécurisée",
-            "link_label":"Accès repo GitHub",
-            "link":"https://github.com/Myzaka/Grimoire"
+            "skills":"Développement avec Vite. Création de documents pdf"
         },
         "project7": {
             "type":"Gestion de projet",
@@ -110,7 +98,7 @@
             "description_label":"Description",
             "description_long":"Projet réalisé dans le cadre de ma formation OpenClassrooms de développeur front-end.",
             "tech_label":"Technologies utilisées",
-            "tech":"React, HRML, SASS",
+            "tech":"React, HTML, SASS",
             "issues_label":"Difficultées rencontrées",
             "issues":"Elaboration de composants réutilisables. Echange de paramètres entre éléments parents et enfants du site. Création d'un routeur.",
             "skills_label":"Compétences acquises",
