--- a/frontend/src/components/Projects/ProjectsList/ProjectisList_text.json
+++ b/frontend/src/components/Projects/ProjectsList/ProjectisList_text.json
@@ -58,7 +58,7 @@
             "type":"Développement web frontend",
             "description_short":"Evaluation de la conformité de moyens de paiement",
             "description_label":"Description",
-            "description_long":"POrtage web d'une méthode d'évaluation de la sécurité et de la conformité réglementaire de moyens de paiement utilisés en entreprise",
+            "description_long":"Portage web d'une méthode d'évaluation de la sécurité et de la conformité réglementaire de moyens de paiement utilisés en entreprise",
             "tech_label":"Technologies utilisées",
             "tech":"Vite, HTML, JavaScript, SASS",
             "issues_label":"Difficultées rencontrées",
@@ -70,27 +70,25 @@
             "type":"Gestion de projet",
             "description_short":"Outil de BI pour l'analyse de campagnes de contrôle interne",
             "description_label":"Description",
-            "description_long":"",
-            "tech":"NodeJS, Express, MongoDB, Mongoose",
-            "issues_label":"Difficultées rencontrées",
-            "issues":"Création des opérations CRUD. Gestion des fichiers images.",
-            "skills_label":"Compétences acquises",
-            "skills":"Utilisation d'une base de données NoSQL (MongoDB) et mise en place d'un modèle de données. Mettre en place des opérations CRUD de manière sécurisée. Stocker des données de manière sécurisée",
-            "link_label":"Accès repo GitHub",
-            "link":"https://github.com/Myzaka/Grimoire"
+            "description_long":"Outil permettant d'analyser finement les informations collectées par questionnaire dans le monde entier, et d'en assurer la consolidation sous forme de tableaux synthétiques pour présentation au Management",
+            "tech_label":"Progiciel de marché",
+            "tech":"QlikView",
+            "issues_label":"Enjeux",
+            "issues":"Conception de tableaux clairs et synthétiques, méthode de consolidation des données",
+            "link_label":"Site web éditeur",
+            "link":"https://www.qlik.com/fr-fr/products/qlikview"
         },
         "project8": {
             "type":"Gestion de projet",
             "description_short":"Outil de tenue de registre de traitement (RGPD)",
             "description_label":"Description",
-            "description_long":"",
-            "tech":"NodeJS, Express, MongoDB, Mongoose",
-            "issues_label":"Difficultées rencontrées",
-            "issues":"Création des opérations CRUD. Gestion des fichiers images.",
-            "skills_label":"Compétences acquises",
-            "skills":"Utilisation d'une base de données NoSQL (MongoDB) et mise en place d'un modèle de données. Mettre en place des opérations CRUD de manière sécurisée. Stocker des données de manière sécurisée",
-            "link_label":"Accès repo GitHub",
-            "link":"https://github.com/Myzaka/Grimoire"
+            "description_long":"Déploiement de l'outil et constitution du registre des traitements d'une grande société française",
+            "tech_label":"Progiciel de marché",
+            "tech":"Provacy4",
+            "issues_label":"Enjeux",
+            "issues":"Identification et qualification des traitements, réalisation d'analyses d'impacts pour les plus critiques",
+            "link_label":"Site web éditeur",
+            "link":"https://www.provacy4.eu/"
         },
         "project9": {
             "type":"Développement web frontend",
@@ -124,14 +122,123 @@
     },
     "en": {
         "project1": {
-            "title":"",
-            "description_short":"",
-            "description_long":""
-            },
-            "project2": {
-            "title":"",
-            "description_short":"",
-            "description_long":""
-            }
+            "type":"Project Management",
+            "description_short":"Internal control self-assessment software",
+            "description_label":"Description",
+            "description_long":"Roll-out of a software enabling the collection of information on the state of internal control in around a hundred companies, located worldwide and involving several hundred users",
+            "tech_label":"External software",
+            "tech":"Enablon, Ivalua, Acuredge",
+            "issues_label":"Issues",
+            "issues":"Relevance of questionnaires, reliability of parameterization, software availability and ergonomics",
+            "link_label":"Editor web site",
+            "link":"https://acuredge.devoteam.com/"
+        },
+        "project2": {
+            "type":"Conception d'outil",
+            "description_short":"Cartographie des risques",
+            "description_label":"Description",
+            "description_long":"Elaboration d'un outil de cotation des risques et de représentation d'une matrice de chaleur",
+            "tech_label":"Technology used",
+            "tech":"Visual Basic pour Excel",
+            "issues_label":"Issues",
+            "issues":"Facilité et souplesse d'utilisation. Représentation graphique simple et claire"
+        },
+        "project3": {
+            "type":"Project Management",
+            "description_short":"Outil d'évaluation des tiers (loi Sapin II)",
+            "description_label":"Description",
+            "description_long":"Déploiement d'un outil permettant la revue complète d'un portefeuille de contreparties pour vérifier leur honorabilité",
+            "tech_label":"External software",
+            "tech":"Solution NoCode fortement paramétrable",
+            "issues_label":"Issues",
+            "issues":"Gestion de projet dans un environnement complexe. Fiabilisation et documentation de la solution"
+        },
+        "project4": {
+            "type":"Project Management",
+            "description_short":"Ligne d'alerte éthique (loi Sapin II)",
+            "description_label":"Description",
+            "description_long":"Déploiement mondial d'un outil permettant de réaliser des signalements confidentiels de situations problématiques",
+            "tech_label":"External software",
+            "tech":"Whispli",
+            "issues_label":"Issues",
+            "issues":"Complexité réglementaire lié à la multiplicité des réglementations à respecter",
+            "link_label":"Editor web site",
+            "link":"https://www.whispli.com/fr/"
+        },
+        "project5": {
+            "type":"Conception d'outil",
+            "description_short":"Analyse de la séparation des tâches en entreprise",
+            "description_label":"Description",
+            "description_long":"Conception et développement d'un outil permettant d'identifier en détail les enjeux de séparation des tâches et de formuler des recommandations d'amélioration",
+            "tech_label":"Technology used",
+            "tech":"Visual Basic pour Excel",
+            "issues_label":"Issues",
+            "issues":"Qualifier les problématiques de séparation des tâches sur les principaux processus de l'entreprise. Proposer une organisation pertinente même pour des très petites structures."
+        },
+        "project6": {
+            "type":"Développement web frontend",
+            "description_short":"Evaluation de la conformité de moyens de paiement",
+            "description_label":"Description",
+            "description_long":"Portage web d'une méthode d'évaluation de la sécurité et de la conformité réglementaire de moyens de paiement utilisés en entreprise",
+            "tech_label":"Technologies used",
+            "tech":"Vite, HTML, JavaScript, SASS",
+            "issues_label":"Issues",
+            "issues":"Gestion d'un formulaire interactif complexe",
+            "skills_label":"Skills acquired",
+            "skills":"Développement avec Vite. Création de documents pdf"
+        },
+        "project7": {
+            "type":"Project Management",
+            "description_short":"Outil de BI pour l'analyse de campagnes de contrôle interne",
+            "description_label":"Description",
+            "description_long":"Outil permettant d'analyser finement les informations collectées par questionnaire dans le monde entier, et d'en assurer la consolidation sous forme de tableaux synthétiques pour présentation au Management",
+            "tech_label":"External software",
+            "tech":"QlikView",
+            "issues_label":"Issues",
+            "issues":"Conception de tableaux clairs et synthétiques, méthode de consolidation des données",
+            "link_label":"Editor web site",
+            "link":"https://www.qlik.com/fr-fr/products/qlikview"
+        },
+        "project8": {
+            "type":"Project Management",
+            "description_short":"Outil de tenue de registre de traitement (RGPD)",
+            "description_label":"Description",
+            "description_long":"Déploiement de l'outil et constitution du registre des traitements d'une grande société française",
+            "tech_label":"External software",
+            "tech":"Provacy4",
+            "issues_label":"Issues",
+            "issues":"Identification et qualification des traitements, réalisation d'analyses d'impacts pour les plus critiques",
+            "link_label":"Editor web site",
+            "link":"https://www.provacy4.eu/"
+        },
+        "project9": {
+            "type":"Développement web frontend",
+            "description_short":"Développement du front d'un site de gestion immobilière",
+            "description_label":"Description",
+            "description_long":"Projet réalisé dans le cadre de ma formation OpenClassrooms de développeur front-end.",
+            "tech_label":"Technologies used",
+            "tech":"React, HTML, SASS",
+            "issues_label":"Issues",
+            "issues":"Elaboration de composants réutilisables. Echange de paramètres entre éléments parents et enfants du site. Création d'un routeur.",
+            "skills_label":"Skills acquired",
+            "skills":"Développement avec React. Création d'une application avec Create React App. Configurer la navigation entre les pages de l'application avec React Router. Utilisation de bibliothèques externes npm",
+            "link_label":"GitHub repository",
+            "link":"https://github.com/Myzaka/Projet-Kasa"
+
+        },
+        "project10": {
+            "type":"Développement web backend",
+            "description_short":"Création du backend d'une librairie en ligne",
+            "description_label":"Description",
+            "description_long":"Projet réalisé dans le cadre de ma formation OpenClassrooms de développeur front-end.",
+            "tech_label":"Technologies used",
+            "tech":"NodeJS, Express, MongoDB, Mongoose",
+            "issues_label":"Issues",
+            "issues":"Création des opérations CRUD. Gestion des fichiers images.",
+            "skills_label":"Skills acquired",
+            "skills":"Utilisation d'une base de données NoSQL (MongoDB) et mise en place d'un modèle de données. Mettre en place des opérations CRUD de manière sécurisée. Stocker des données de manière sécurisée",
+            "link_label":"GitHub repository",
+            "link":"https://github.com/Myzaka/Grimoire"
     }
   }
+}
