Traduction de plusieurs projets (il en reste 6)

--- a/frontend/src/components/Projects/ProjectsList/ProjectisList_text.json
+++ b/frontend/src/components/Projects/ProjectsList/ProjectisList_text.json
@@ -201,42 +201,42 @@
         },
         "project8": {
             "type":"Project Management",
-            "description_short":"Outil de tenue de registre de traitement (RGPD)",
+            "description_short":"Data processing register (GDPR)",
             "description_label":"Description",
-            "description_long":"Déploiement de l'outil et constitution du registre des traitements d'une grande société française",
+            "description_long":"Tool roll out and elaboration of the processing register for a major French company",
             "tech_label":"External software",
             "tech":"Provacy4",
             "issues_label":"Issues",
-            "issues":"Identification et qualification des traitements, réalisation d'analyses d'impacts pour les plus critiques",
+            "issues":"Identification and qualification of processing operations, impact analysis for the most critical ones",
             "link_label":"Editor web site",
             "link":"https://www.provacy4.eu/"
         },
         "project9": {
-            "type":"Développement web frontend",
-            "description_short":"Développement du front d'un site de gestion immobilière",
+            "type":"Frontend web development",
+            "description_short":"Front-end development for a property management website",
             "description_label":"Description",
-            "description_long":"Projet réalisé dans le cadre de ma formation OpenClassrooms de développeur front-end.",
+            "description_long":"Project carried out as part of my OpenClassrooms front-end developer training course.",
             "tech_label":"Technologies used",
             "tech":"React, HTML, SASS",
             "issues_label":"Issues",
-            "issues":"Elaboration de composants réutilisables. Echange de paramètres entre éléments parents et enfants du site. Création d'un routeur.",
+            "issues":"Elaboration of reusable components. Exchange of parameters between parent and child site elements. Creation of a router.",
             "skills_label":"Skills acquired",
-            "skills":"Développement avec React. Création d'une application avec Create React App. Configurer la navigation entre les pages de l'application avec React Router. Utilisation de bibliothèques externes npm",
+            "skills":"Development with React. Create an application with Create React App. Configure navigation between application pages with React Router. Use of external npm libraries",
             "link_label":"GitHub repository",
             "link":"https://github.com/Myzaka/Projet-Kasa"
 
         },
         "project10": {
-            "type":"Développement web backend",
-            "description_short":"Création du backend d'une librairie en ligne",
+            "type":"Web backend development",
+            "description_short":"Creation of an online bookstore backend",
             "description_label":"Description",
-            "description_long":"Projet réalisé dans le cadre de ma formation OpenClassrooms de développeur front-end.",
+            "description_long":"Project carried out as part of my OpenClassrooms front-end developer training course.",
             "tech_label":"Technologies used",
             "tech":"NodeJS, Express, MongoDB, Mongoose",
             "issues_label":"Issues",
-            "issues":"Création des opérations CRUD. Gestion des fichiers images.",
+            "issues":"Creation of CRUD operations. Image file management.",
             "skills_label":"Skills acquired",
-            "skills":"Utilisation d'une base de données NoSQL (MongoDB) et mise en place d'un modèle de données. Mettre en place des opérations CRUD de manière sécurisée. Stocker des données de manière sécurisée",
+            "skills":"Using a NoSQL database (MongoDB) and setting up a data model. Implement secure CRUD operations. Store data securely",
             "link_label":"GitHub repository",
             "link":"https://github.com/Myzaka/Grimoire"
     }
