--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://Myzaka.github.io/Personal-page",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
@@ -8,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.0",
     "bootstrap": "^5.3.2",
+    "emailjs-com": "^3.2.0",
     "nodemailer": "^6.9.7",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
@@ -17,6 +19,7 @@
     "react-parallax": "^3.5.1",
     "react-scripts": "^5.0.1",
     "react-scroll-parallax": "^3.4.2",
+    "sanitize-html": "^2.11.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -24,7 +27,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "compile-scss": "node-sass src/styles -o src/styles"
+    "compile-scss": "node-sass src/styles -o src/styles",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -43,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.0.0"
   }
 }
