--- a/frontend/src/components/Projects/ProjectsList/ProjectisList_text.json
+++ b/frontend/src/components/Projects/ProjectsList/ProjectisList_text.json
@@ -3,6 +3,7 @@
         "project1": {
             "category":"Gestion",
             "type":"Gestion de projet",
+            "image":"projet1",
             "description_short":"Outil d'auto-évaluation du contrôle interne",
             "description_label":"Description",
             "description_long":"Déploiement et animation d'outils permettant la collecte d'informations sur l'état du contrôle interne dans une centaine de sociétés, situées dans le monde entier et faisant intervenir plusieurs centaines d'utilisateurs",
